UltraMegaMiniC/miniC.output
Terminals unused in grammar

    REAL


State 77 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: ε

    2 program: $@1 EMPIEZA ID A_PAREN C_PAREN A_LLAVE declarations statement_list C_LLAVE

    3 $@2: ε

    4 declarations: declarations VAR $@2 identifier_list SEMICOLON

    5 $@3: ε

    6 declarations: declarations CONST $@3 identifier_list SEMICOLON
    7             | ε

    8 identifier_list: asig
    9                | identifier_list COMA asig

   10 asig: ID
   11     | ID ASIG_OP expression

   12 statement_list: statement_list statement
   13               | ε

   14 statement: ID ASIG_OP expression SEMICOLON
   15          | A_LLAVE statement_list C_LLAVE
   16          | SI A_PAREN expression C_PAREN statement SINO statement
   17          | SI A_PAREN expression C_PAREN statement
   18          | MIENTRAS A_PAREN expression C_PAREN statement
   19          | HACER statement MIENTRAS A_PAREN expression C_PAREN SEMICOLON
   20          | ESCRIBIR print_list SEMICOLON
   21          | LEER read_list SEMICOLON
   22          | error SEMICOLON

   23 print_list: print_item
   24           | print_list COMA print_item

   25 print_item: expression
   26           | STRING

   27 read_list: ID
   28          | read_list COMA ID

   29 expression: expression MAS_OP expression
   30           | expression MENOS_OP expression
   31           | expression POR_OP expression
   32           | expression DIV_OP expression
   33           | MENOS_OP expression
   34           | A_PAREN expression C_PAREN
   35           | ID
   36           | NUM


Terminals, with rules where they appear

    $end (0) 0
    error (256) 22
    EMPIEZA (258) 2
    LEER (259) 21
    ESCRIBIR (260) 20
    A_PAREN (261) 2 16 17 18 19 34
    C_PAREN (262) 2 16 17 18 19 34
    SEMICOLON (263) 4 6 14 19 20 21 22
    COMA (264) 9 24 28
    ASIG_OP (265) 11 14
    MAS_OP (266) 29
    MENOS_OP (267) 30 33
    A_LLAVE (268) 2 15
    C_LLAVE (269) 2 15
    VAR (270) 4
    CONST (271) 6
    SI (272) 16 17
    SINO (273) 16
    MIENTRAS (274) 18 19
    POR_OP (275) 31
    DIV_OP (276) 32
    REAL (277)
    HACER (278) 19
    STRING <lexema> (279) 26
    ID <lexema> (280) 2 10 11 14 27 28 35
    NUM <lexema> (281) 36
    UMENOS (282)


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    program (29)
        on left: 2
        on right: 0
    $@1 (30)
        on left: 1
        on right: 2
    declarations <codigo> (31)
        on left: 4 6 7
        on right: 2 4 6
    $@2 (32)
        on left: 3
        on right: 4
    $@3 (33)
        on left: 5
        on right: 6
    identifier_list <codigo> (34)
        on left: 8 9
        on right: 4 6 9
    asig <codigo> (35)
        on left: 10 11
        on right: 8 9
    statement_list <codigo> (36)
        on left: 12 13
        on right: 2 12 15
    statement <codigo> (37)
        on left: 14 15 16 17 18 19 20 21 22
        on right: 12 16 17 18 19
    print_list <codigo> (38)
        on left: 23 24
        on right: 20 24
    print_item <codigo> (39)
        on left: 25 26
        on right: 23 24
    read_list <codigo> (40)
        on left: 27 28
        on right: 21 28
    expression <codigo> (41)
        on left: 29 30 31 32 33 34 35 36
        on right: 11 14 16 17 18 19 25 29 30 31 32 33 34


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    2 program: $@1 • EMPIEZA ID A_PAREN C_PAREN A_LLAVE declarations statement_list C_LLAVE

    EMPIEZA  shift, and go to state 4


State 3

    0 $accept: program $end •

    $default  accept


State 4

    2 program: $@1 EMPIEZA • ID A_PAREN C_PAREN A_LLAVE declarations statement_list C_LLAVE

    ID  shift, and go to state 5


State 5

    2 program: $@1 EMPIEZA ID • A_PAREN C_PAREN A_LLAVE declarations statement_list C_LLAVE

    A_PAREN  shift, and go to state 6


State 6

    2 program: $@1 EMPIEZA ID A_PAREN • C_PAREN A_LLAVE declarations statement_list C_LLAVE

    C_PAREN  shift, and go to state 7


State 7

    2 program: $@1 EMPIEZA ID A_PAREN C_PAREN • A_LLAVE declarations statement_list C_LLAVE

    A_LLAVE  shift, and go to state 8


State 8

    2 program: $@1 EMPIEZA ID A_PAREN C_PAREN A_LLAVE • declarations statement_list C_LLAVE

    $default  reduce using rule 7 (declarations)

    declarations  go to state 9


State 9

    2 program: $@1 EMPIEZA ID A_PAREN C_PAREN A_LLAVE declarations • statement_list C_LLAVE
    4 declarations: declarations • VAR $@2 identifier_list SEMICOLON
    6             | declarations • CONST $@3 identifier_list SEMICOLON

    VAR    shift, and go to state 10
    CONST  shift, and go to state 11

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 12


State 10

    4 declarations: declarations VAR • $@2 identifier_list SEMICOLON

    $default  reduce using rule 3 ($@2)

    $@2  go to state 13


State 11

    6 declarations: declarations CONST • $@3 identifier_list SEMICOLON

    $default  reduce using rule 5 ($@3)

    $@3  go to state 14


State 12

    2 program: $@1 EMPIEZA ID A_PAREN C_PAREN A_LLAVE declarations statement_list • C_LLAVE
   12 statement_list: statement_list • statement

    error     shift, and go to state 15
    LEER      shift, and go to state 16
    ESCRIBIR  shift, and go to state 17
    A_LLAVE   shift, and go to state 18
    C_LLAVE   shift, and go to state 19
    SI        shift, and go to state 20
    MIENTRAS  shift, and go to state 21
    HACER     shift, and go to state 22
    ID        shift, and go to state 23

    statement  go to state 24


State 13

    4 declarations: declarations VAR $@2 • identifier_list SEMICOLON

    ID  shift, and go to state 25

    identifier_list  go to state 26
    asig             go to state 27


State 14

    6 declarations: declarations CONST $@3 • identifier_list SEMICOLON

    ID  shift, and go to state 25

    identifier_list  go to state 28
    asig             go to state 27


State 15

   22 statement: error • SEMICOLON

    SEMICOLON  shift, and go to state 29


State 16

   21 statement: LEER • read_list SEMICOLON

    ID  shift, and go to state 30

    read_list  go to state 31


State 17

   20 statement: ESCRIBIR • print_list SEMICOLON

    A_PAREN   shift, and go to state 32
    MENOS_OP  shift, and go to state 33
    STRING    shift, and go to state 34
    ID        shift, and go to state 35
    NUM       shift, and go to state 36

    print_list  go to state 37
    print_item  go to state 38
    expression  go to state 39


State 18

   15 statement: A_LLAVE • statement_list C_LLAVE

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 40


State 19

    2 program: $@1 EMPIEZA ID A_PAREN C_PAREN A_LLAVE declarations statement_list C_LLAVE •

    $default  reduce using rule 2 (program)


State 20

   16 statement: SI • A_PAREN expression C_PAREN statement SINO statement
   17          | SI • A_PAREN expression C_PAREN statement

    A_PAREN  shift, and go to state 41


State 21

   18 statement: MIENTRAS • A_PAREN expression C_PAREN statement

    A_PAREN  shift, and go to state 42


State 22

   19 statement: HACER • statement MIENTRAS A_PAREN expression C_PAREN SEMICOLON

    error     shift, and go to state 15
    LEER      shift, and go to state 16
    ESCRIBIR  shift, and go to state 17
    A_LLAVE   shift, and go to state 18
    SI        shift, and go to state 20
    MIENTRAS  shift, and go to state 21
    HACER     shift, and go to state 22
    ID        shift, and go to state 23

    statement  go to state 43


State 23

   14 statement: ID • ASIG_OP expression SEMICOLON

    ASIG_OP  shift, and go to state 44


State 24

   12 statement_list: statement_list statement •

    $default  reduce using rule 12 (statement_list)


State 25

   10 asig: ID •
   11     | ID • ASIG_OP expression

    ASIG_OP  shift, and go to state 45

    $default  reduce using rule 10 (asig)


State 26

    4 declarations: declarations VAR $@2 identifier_list • SEMICOLON
    9 identifier_list: identifier_list • COMA asig

    SEMICOLON  shift, and go to state 46
    COMA       shift, and go to state 47


State 27

    8 identifier_list: asig •

    $default  reduce using rule 8 (identifier_list)


State 28

    6 declarations: declarations CONST $@3 identifier_list • SEMICOLON
    9 identifier_list: identifier_list • COMA asig

    SEMICOLON  shift, and go to state 48
    COMA       shift, and go to state 47


State 29

   22 statement: error SEMICOLON •

    $default  reduce using rule 22 (statement)


State 30

   27 read_list: ID •

    $default  reduce using rule 27 (read_list)


State 31

   21 statement: LEER read_list • SEMICOLON
   28 read_list: read_list • COMA ID

    SEMICOLON  shift, and go to state 49
    COMA       shift, and go to state 50


State 32

   34 expression: A_PAREN • expression C_PAREN

    A_PAREN   shift, and go to state 32
    MENOS_OP  shift, and go to state 33
    ID        shift, and go to state 35
    NUM       shift, and go to state 36

    expression  go to state 51


State 33

   33 expression: MENOS_OP • expression

    A_PAREN   shift, and go to state 32
    MENOS_OP  shift, and go to state 33
    ID        shift, and go to state 35
    NUM       shift, and go to state 36

    expression  go to state 52


State 34

   26 print_item: STRING •

    $default  reduce using rule 26 (print_item)


State 35

   35 expression: ID •

    $default  reduce using rule 35 (expression)


State 36

   36 expression: NUM •

    $default  reduce using rule 36 (expression)


State 37

   20 statement: ESCRIBIR print_list • SEMICOLON
   24 print_list: print_list • COMA print_item

    SEMICOLON  shift, and go to state 53
    COMA       shift, and go to state 54


State 38

   23 print_list: print_item •

    $default  reduce using rule 23 (print_list)


State 39

   25 print_item: expression •
   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • POR_OP expression
   32           | expression • DIV_OP expression

    MAS_OP    shift, and go to state 55
    MENOS_OP  shift, and go to state 56
    POR_OP    shift, and go to state 57
    DIV_OP    shift, and go to state 58

    $default  reduce using rule 25 (print_item)


State 40

   12 statement_list: statement_list • statement
   15 statement: A_LLAVE statement_list • C_LLAVE

    error     shift, and go to state 15
    LEER      shift, and go to state 16
    ESCRIBIR  shift, and go to state 17
    A_LLAVE   shift, and go to state 18
    C_LLAVE   shift, and go to state 59
    SI        shift, and go to state 20
    MIENTRAS  shift, and go to state 21
    HACER     shift, and go to state 22
    ID        shift, and go to state 23

    statement  go to state 24


State 41

   16 statement: SI A_PAREN • expression C_PAREN statement SINO statement
   17          | SI A_PAREN • expression C_PAREN statement

    A_PAREN   shift, and go to state 32
    MENOS_OP  shift, and go to state 33
    ID        shift, and go to state 35
    NUM       shift, and go to state 36

    expression  go to state 60


State 42

   18 statement: MIENTRAS A_PAREN • expression C_PAREN statement

    A_PAREN   shift, and go to state 32
    MENOS_OP  shift, and go to state 33
    ID        shift, and go to state 35
    NUM       shift, and go to state 36

    expression  go to state 61


State 43

   19 statement: HACER statement • MIENTRAS A_PAREN expression C_PAREN SEMICOLON

    MIENTRAS  shift, and go to state 62


State 44

   14 statement: ID ASIG_OP • expression SEMICOLON

    A_PAREN   shift, and go to state 32
    MENOS_OP  shift, and go to state 33
    ID        shift, and go to state 35
    NUM       shift, and go to state 36

    expression  go to state 63


State 45

   11 asig: ID ASIG_OP • expression

    A_PAREN   shift, and go to state 32
    MENOS_OP  shift, and go to state 33
    ID        shift, and go to state 35
    NUM       shift, and go to state 36

    expression  go to state 64


State 46

    4 declarations: declarations VAR $@2 identifier_list SEMICOLON •

    $default  reduce using rule 4 (declarations)


State 47

    9 identifier_list: identifier_list COMA • asig

    ID  shift, and go to state 25

    asig  go to state 65


State 48

    6 declarations: declarations CONST $@3 identifier_list SEMICOLON •

    $default  reduce using rule 6 (declarations)


State 49

   21 statement: LEER read_list SEMICOLON •

    $default  reduce using rule 21 (statement)


State 50

   28 read_list: read_list COMA • ID

    ID  shift, and go to state 66


State 51

   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • POR_OP expression
   32           | expression • DIV_OP expression
   34           | A_PAREN expression • C_PAREN

    C_PAREN   shift, and go to state 67
    MAS_OP    shift, and go to state 55
    MENOS_OP  shift, and go to state 56
    POR_OP    shift, and go to state 57
    DIV_OP    shift, and go to state 58


State 52

   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • POR_OP expression
   32           | expression • DIV_OP expression
   33           | MENOS_OP expression •

    $default  reduce using rule 33 (expression)


State 53

   20 statement: ESCRIBIR print_list SEMICOLON •

    $default  reduce using rule 20 (statement)


State 54

   24 print_list: print_list COMA • print_item

    A_PAREN   shift, and go to state 32
    MENOS_OP  shift, and go to state 33
    STRING    shift, and go to state 34
    ID        shift, and go to state 35
    NUM       shift, and go to state 36

    print_item  go to state 68
    expression  go to state 39


State 55

   29 expression: expression MAS_OP • expression

    A_PAREN   shift, and go to state 32
    MENOS_OP  shift, and go to state 33
    ID        shift, and go to state 35
    NUM       shift, and go to state 36

    expression  go to state 69


State 56

   30 expression: expression MENOS_OP • expression

    A_PAREN   shift, and go to state 32
    MENOS_OP  shift, and go to state 33
    ID        shift, and go to state 35
    NUM       shift, and go to state 36

    expression  go to state 70


State 57

   31 expression: expression POR_OP • expression

    A_PAREN   shift, and go to state 32
    MENOS_OP  shift, and go to state 33
    ID        shift, and go to state 35
    NUM       shift, and go to state 36

    expression  go to state 71


State 58

   32 expression: expression DIV_OP • expression

    A_PAREN   shift, and go to state 32
    MENOS_OP  shift, and go to state 33
    ID        shift, and go to state 35
    NUM       shift, and go to state 36

    expression  go to state 72


State 59

   15 statement: A_LLAVE statement_list C_LLAVE •

    $default  reduce using rule 15 (statement)


State 60

   16 statement: SI A_PAREN expression • C_PAREN statement SINO statement
   17          | SI A_PAREN expression • C_PAREN statement
   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • POR_OP expression
   32           | expression • DIV_OP expression

    C_PAREN   shift, and go to state 73
    MAS_OP    shift, and go to state 55
    MENOS_OP  shift, and go to state 56
    POR_OP    shift, and go to state 57
    DIV_OP    shift, and go to state 58


State 61

   18 statement: MIENTRAS A_PAREN expression • C_PAREN statement
   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • POR_OP expression
   32           | expression • DIV_OP expression

    C_PAREN   shift, and go to state 74
    MAS_OP    shift, and go to state 55
    MENOS_OP  shift, and go to state 56
    POR_OP    shift, and go to state 57
    DIV_OP    shift, and go to state 58


State 62

   19 statement: HACER statement MIENTRAS • A_PAREN expression C_PAREN SEMICOLON

    A_PAREN  shift, and go to state 75


State 63

   14 statement: ID ASIG_OP expression • SEMICOLON
   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • POR_OP expression
   32           | expression • DIV_OP expression

    SEMICOLON  shift, and go to state 76
    MAS_OP     shift, and go to state 55
    MENOS_OP   shift, and go to state 56
    POR_OP     shift, and go to state 57
    DIV_OP     shift, and go to state 58


State 64

   11 asig: ID ASIG_OP expression •
   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • POR_OP expression
   32           | expression • DIV_OP expression

    MAS_OP    shift, and go to state 55
    MENOS_OP  shift, and go to state 56
    POR_OP    shift, and go to state 57
    DIV_OP    shift, and go to state 58

    $default  reduce using rule 11 (asig)


State 65

    9 identifier_list: identifier_list COMA asig •

    $default  reduce using rule 9 (identifier_list)


State 66

   28 read_list: read_list COMA ID •

    $default  reduce using rule 28 (read_list)


State 67

   34 expression: A_PAREN expression C_PAREN •

    $default  reduce using rule 34 (expression)


State 68

   24 print_list: print_list COMA print_item •

    $default  reduce using rule 24 (print_list)


State 69

   29 expression: expression • MAS_OP expression
   29           | expression MAS_OP expression •
   30           | expression • MENOS_OP expression
   31           | expression • POR_OP expression
   32           | expression • DIV_OP expression

    POR_OP  shift, and go to state 57
    DIV_OP  shift, and go to state 58

    $default  reduce using rule 29 (expression)


State 70

   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   30           | expression MENOS_OP expression •
   31           | expression • POR_OP expression
   32           | expression • DIV_OP expression

    POR_OP  shift, and go to state 57
    DIV_OP  shift, and go to state 58

    $default  reduce using rule 30 (expression)


State 71

   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • POR_OP expression
   31           | expression POR_OP expression •
   32           | expression • DIV_OP expression

    $default  reduce using rule 31 (expression)


State 72

   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • POR_OP expression
   32           | expression • DIV_OP expression
   32           | expression DIV_OP expression •

    $default  reduce using rule 32 (expression)


State 73

   16 statement: SI A_PAREN expression C_PAREN • statement SINO statement
   17          | SI A_PAREN expression C_PAREN • statement

    error     shift, and go to state 15
    LEER      shift, and go to state 16
    ESCRIBIR  shift, and go to state 17
    A_LLAVE   shift, and go to state 18
    SI        shift, and go to state 20
    MIENTRAS  shift, and go to state 21
    HACER     shift, and go to state 22
    ID        shift, and go to state 23

    statement  go to state 77


State 74

   18 statement: MIENTRAS A_PAREN expression C_PAREN • statement

    error     shift, and go to state 15
    LEER      shift, and go to state 16
    ESCRIBIR  shift, and go to state 17
    A_LLAVE   shift, and go to state 18
    SI        shift, and go to state 20
    MIENTRAS  shift, and go to state 21
    HACER     shift, and go to state 22
    ID        shift, and go to state 23

    statement  go to state 78


State 75

   19 statement: HACER statement MIENTRAS A_PAREN • expression C_PAREN SEMICOLON

    A_PAREN   shift, and go to state 32
    MENOS_OP  shift, and go to state 33
    ID        shift, and go to state 35
    NUM       shift, and go to state 36

    expression  go to state 79


State 76

   14 statement: ID ASIG_OP expression SEMICOLON •

    $default  reduce using rule 14 (statement)


State 77

   16 statement: SI A_PAREN expression C_PAREN statement • SINO statement
   17          | SI A_PAREN expression C_PAREN statement •

    SINO  shift, and go to state 80

    SINO      [reduce using rule 17 (statement)]
    $default  reduce using rule 17 (statement)


State 78

   18 statement: MIENTRAS A_PAREN expression C_PAREN statement •

    $default  reduce using rule 18 (statement)


State 79

   19 statement: HACER statement MIENTRAS A_PAREN expression • C_PAREN SEMICOLON
   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • POR_OP expression
   32           | expression • DIV_OP expression

    C_PAREN   shift, and go to state 81
    MAS_OP    shift, and go to state 55
    MENOS_OP  shift, and go to state 56
    POR_OP    shift, and go to state 57
    DIV_OP    shift, and go to state 58


State 80

   16 statement: SI A_PAREN expression C_PAREN statement SINO • statement

    error     shift, and go to state 15
    LEER      shift, and go to state 16
    ESCRIBIR  shift, and go to state 17
    A_LLAVE   shift, and go to state 18
    SI        shift, and go to state 20
    MIENTRAS  shift, and go to state 21
    HACER     shift, and go to state 22
    ID        shift, and go to state 23

    statement  go to state 82


State 81

   19 statement: HACER statement MIENTRAS A_PAREN expression C_PAREN • SEMICOLON

    SEMICOLON  shift, and go to state 83


State 82

   16 statement: SI A_PAREN expression C_PAREN statement SINO statement •

    $default  reduce using rule 16 (statement)


State 83

   19 statement: HACER statement MIENTRAS A_PAREN expression C_PAREN SEMICOLON •

    $default  reduce using rule 19 (statement)
